--- a/Family_Data/templates/index.html
+++ b/Family_Data/templates/index.html
@@ -23,7 +23,7 @@
     </style>
   </head>
   <body>
-    <div class="container p-5">
+    <div class="container p-2 p-lg-5">
       <div class="row justify-content-center">
         <div class="col-12 mb-4">
           <h3 class="text-center">
